// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SubtractionItem /> > should render when [create_at=%p] 0 1`] = `
<BoxLink
  key="foo"
  to="/subtractions/foo"
>
  <styled.div>
    <span>
      Foo
    </span>
    <span>
      <SubtractionItemIcon
        ready={true}
      />
       
      Ready
    </span>
  </styled.div>
  <SubtractionAttribution
    handle="bar"
    time={0}
  />
</BoxLink>
`;

exports[`<SubtractionItem /> > should render when [create_at=%p] null 1`] = `
<BoxLink
  key="foo"
  to="/subtractions/foo"
>
  <styled.div>
    <span>
      Foo
    </span>
    <span>
      <SubtractionItemIcon
        ready={true}
      />
       
      Ready
    </span>
  </styled.div>
  <SubtractionAttribution
    handle="bar"
    time={null}
  />
</BoxLink>
`;

exports[`<SubtractionItem /> > should render when [ready=%p] false 1`] = `
<BoxLink
  key="foo"
  to="/subtractions/foo"
>
  <styled.div>
    <span>
      Foo
    </span>
    <span>
      <SubtractionItemIcon
        ready={false}
      />
       
      Creating
    </span>
  </styled.div>
  <SubtractionAttribution
    handle="bar"
  />
</BoxLink>
`;

exports[`<SubtractionItem /> > should render when [ready=%p] true 1`] = `
<BoxLink
  key="foo"
  to="/subtractions/foo"
>
  <styled.div>
    <span>
      Foo
    </span>
    <span>
      <SubtractionItemIcon
        ready={true}
      />
       
      Ready
    </span>
  </styled.div>
  <SubtractionAttribution
    handle="bar"
  />
</BoxLink>
`;

exports[`<SubtractionItemIcon /> > should render when [ready=%p] false 1`] = `
<Loader
  color="primary"
  size="14px"
/>
`;

exports[`<SubtractionItemIcon /> > should render when [ready=%p] true 1`] = `
<Icon
  color="green"
  name="check"
/>
`;
